updated all pages

--- a/cart.css
+++ b/cart.css
@@ -1,6 +1,12 @@
+body{
+    overflow-y: hidden;
+    width: 100%;
+}
 .vert{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .topic{
     background-color: #FF4B4B;
@@ -23,12 +29,13 @@
     width: 1400px;
     height: 200px;
     
-    margin: 2rem 1rem 0.1rem 100px;
+    margin: 2rem 1rem 0.1rem 1rem;
 
     border-radius: 20px;
 
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 .cartimg{
     display: flex;
@@ -118,4 +125,24 @@ img{
     align-items: center;
 
     margin: 40px 10px 0 10px;
+}
+
+.checkoutBtn{
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.pinkbtn{
+    background-color: #FF4B4B;
+    border-radius: 40px;
+    border: none;
+    margin: 10px;
+    padding: 1rem;
+    color: #FEFBE5;
+    font-size: 24px;
+    font-weight: bold;
+    position: relative;
+    width: 1000px;
+    cursor: pointer;
 }
