--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ html,body
     padding: 0;
     margin: 0px;
     overflow-x: hidden; 
+    width: 100%;
 }
 body{
     background-color: #FFB7B7;
@@ -13,30 +14,19 @@ body{
 .account-bar{
     border: 1px solid #FF4B4B;
     background-color: #FF4B4B;
-    width: 1600px;
+    width: 100%;
     height: 30px;
 
-    position: relative;
+    display: flex;
+    flex-direction: row;
 }
-ul{
-    float: left;
-    color:white;
-}
-ul li{
-    margin-top: -10px;
-    float:left;
-    position:relative;
-    left:1180%;
-    width: 90px;
-    font-size: 14px;
-    font-family: condensed, sans-serif;
-    list-style-type: none;
-    margin-left: -30px;
-}
-
-ul li a{
+.account-bar a{
     text-decoration: none;
-    color:white;
+    color: white;
+}
+.account-bar div{
+    margin-left: auto;
+    margin-right: 30px;
 }
 ::placeholder{
     color: #FF4B4B;
@@ -48,10 +38,12 @@ ul li a{
     background-color: #FF4B4B;
     height: 80px;
     position: relative;
-    z-index: 10;
 }
 .icon{
     z-index: 100;
+}
+.fa-angle-down{
+    color: white;
 }
 .fa-solid{
     color:white;
@@ -76,6 +68,7 @@ ul li a{
 }
 .fa-magnifying-glass{
     color:#FF4B4B;
+
 }
 .fa-angle-left , .fa-angle-right{
     color: #FF4B4B;
@@ -120,6 +113,7 @@ h1{
 #navbar {
     position: fixed;
     z-index: 150;
+    width: 100%;
   }
 .homebtn {
     text-decoration: none;
