--- a/checkout.css
+++ b/checkout.css
@@ -1,23 +1,165 @@
-.vert{
+
+.vert {
     display: flex;
     flex-direction: column;
 
     margin: 150px 0px 20px 100px;
-
+    justify-content: center;
 }
-.horiz{
+
+.horiz {
     display: flex;
     flex-direction: row;
 }
-.left, .right{
+.horizon{
+    display: flex;
+    flex-direction: row;
+    height: 150px;
+    align-items: center;
+    margin-top: 150px;
+}
+.left{
+    width: 70%;
+}
+.left,
+.right {
     font-size: 32px;
     font-weight: bolder;
     color: #FF4B4B;
-    width: 50%;
 }
-.right{
+
+.right {
     right: 0;
 }
-.val{
+
+.val {
     color: #875EFF;
+}
+
+.payMeth {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input~.checkmark {
+    background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked~.checkmark {
+    background-color: #FF4B4B;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked~.checkmark:after {
+    display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+}
+label{
+    letter-spacing: 0.5px;
+}
+
+
+.promo{
+    font-size: 32px;
+    font-weight: bolder;
+    color: #FF4B4B;
+    width: 70%;
+}
+#promoCode{
+    border: none;
+    outline: none;
+    background-color: #fee0d2;
+    color: #FF4B4B;
+    border-radius: 40px;
+
+    width: 400px;
+    height: 40px;
+
+    text-indent: 1rem;
+    font-weight: bold;
+    font-size: 16px;
+}
+::placeholder{
+    text-indent: 1rem;
+    opacity: 0.7;
+}
+#okBtn{
+    color: white;
+    background: #FF4B4B;
+    border: none;
+    border-radius: 10px;
+    padding:10px;
+
+    transition: 0.5s;
+}
+#okBtn:hover{
+    background-color: #c23737;
+}
+#checkout{
+    color: white;
+    background: #FF4B4B;
+    border: none;
+    border-radius: 10px;
+    padding:10px;
+    margin-top: 90px;
+
+    font-size: 32px;
+    width: 200px;
+
+    transition: 0.5s;
+}
+#checkout:hover{
+    background-color: #c23737;
 }
