--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ html,body
     margin: 0px;
     overflow-x: hidden; 
     width: 100%;
+    scroll-behavior: smooth;
 }
 body{
     background-color: #FFB7B7;
@@ -28,6 +29,9 @@ body{
     margin-left: auto;
     margin-right: 30px;
 }
+.account-bar div a{
+    margin-right: 10px;
+}
 ::placeholder{
     color: #FF4B4B;
     font-size: large;
@@ -36,7 +40,6 @@ body{
 .header{
     border: 1px solid #FF4B4B;
     background-color: #FF4B4B;
-    height: 80px;
     position: relative;
 }
 .icon{
@@ -54,17 +57,17 @@ body{
 .heart{
     position:absolute;
     left: 90%;
-    top:30%;
+    top:25%;
 }
 .fa-cart-shopping{
     position:absolute;
     left: 95%;
-    top:30%;
+    top:25%;
 }
 .fa-bag-shopping{
     position:absolute;
     left:55px;
-    top:30%;
+    top:25%;
 }
 .fa-magnifying-glass{
     color:#FF4B4B;
@@ -82,10 +85,7 @@ h1{
     width: 50%;
 }
 #searchbox{
-    position:absolute;
-    top: 15%;
-    left:20%;
-    width: 60%;
+    width: 100%;
     height: 30px;
     border-radius: 30px;
     border: none;
@@ -98,11 +98,12 @@ h1{
 }
 .header button{
     border: none;
-    background-color: #FED8C6;;
-    position:relative;
-    top: -59px;
-    left: 1230px;
     cursor: pointer;
+    position: absolute;
+    background-color: #FED8C6;
+    right: 10px;
+    bottom: 0;
+    top: 0;
 }
 .sticky{
     position: fixed;
@@ -117,6 +118,13 @@ h1{
   }
 .homebtn {
     text-decoration: none;
+}
+.sbox{
+    position: relative;
+    height: 30px;
+    width: 60%;
+    bottom: 65px;
+    margin-left: 20%;
 }
 /****************/
 /* header-ends */
