--- a/Web_Programming_FN_Proj-main/product.css
+++ b/Web_Programming_FN_Proj-main/product.css
@@ -4,13 +4,13 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-top: -50px;
+    margin-top: -30px;
 }
 .pdName{
     position: relative;
     color: #FF4B4B;
     margin-top: 200px;
-    margin-left: 200px;
+    margin-left: 210px;
     font-size: 36px;
     font-weight: bold;
 }
@@ -33,13 +33,15 @@
     height: 530px;
 }
 .rightText{
-    margin-right: 450px;
+    margin-right: 400px;
     font-size: 40px;
     font-weight: bold;
     color: #FF4B4B;
+    letter-spacing: 0.10em;
+    margin-bottom: 30px;
 }
 .rightText p{
-    margin-left: 30px;
+    margin-left: 25px;
 }
 .priceText{
     color: #875EFF;
@@ -66,6 +68,9 @@
     text-align: center;
     font-size: 20px;
     font-weight: bold;
+    font-family:'Fredoka One';
+    letter-spacing: 0.10em;
+
 }
 .amountbtn{
     border: none;
@@ -74,12 +79,14 @@
     color: #FF4B4B;
     width: 60px;
     height: 60px;
-    font-size: 50px;
+    font-size: 30px;
+    font-family:'Fredoka One';
     text-align: center;
     margin-left: 20px;
     margin-right: 20px;
     cursor: pointer;
     transition: 0.2s
+    
 }
 .amountbtn:hover{
     background-color: #FF4B4B;
@@ -112,7 +119,9 @@
     padding: 1rem;
     color: #FEFBE5;
     font-size: 24px;
-    font-weight: bold;
+    font-family:'Fredoka One';
+    letter-spacing: 0.10em;
+
     position: relative;
     width: 1000px;
     cursor: pointer;
