--- a/Web_Programming_FN_Proj-main/wishlist.css
+++ b/Web_Programming_FN_Proj-main/wishlist.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-left: 100px;
+    margin-left: 50px;
 }
 .itemsBd{
     background-color: #FFDBDB;
@@ -32,8 +32,7 @@
 .topic{
     background-color: #FF4B4B;
     color: white;
-    font-size: 70px;
-    font-weight: bold;
+    font-size: 60px;
 
     align-items: center;
     justify-content: center;
@@ -44,14 +43,14 @@
 
     margin-top: 150px;
     margin-left: 100px;
-    padding: 0 1rem 0 1rem;
+    padding: 0 1.5rem 0 1.5rem;
 
-    border-radius: 30px;
+    border-radius: 25px;
 }
 .pinktext{
     color: #FF4B4B;
     font-size: 40px;
-    font-weight: bold;
+    letter-spacing: 0.05em;
 
     margin-top: 210px;
     margin-left: 20px;
@@ -60,7 +59,7 @@
     color: #875EFF;
     font-weight: bold;
     font-size: 20px;
-    margin-left: 100px;
+    margin-left: 90px;
     margin-top: -1rem;
     text-indent: 3rem;
 }
@@ -87,7 +86,7 @@ img{
 }
 .pdName{
     color: #FF4B4B;
-    font-size: 24px;
+    font-size: 25px;
     font-weight: bold;
 }
 .textnbtn{
@@ -104,12 +103,14 @@ img{
     border: none;
     padding: 1rem;
 
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 22px;
+    font-family:'Fredoka One';
+    letter-spacing: 0.05em;
 
     cursor: pointer;
 
-    margin-right: 20px;
+    margin-right: 18px;
+    margin-bottom: 20px;
 }
 .btnrow{
     margin-top: 10%;
